@@ -1,5 +1,6 @@
 Changes for 1.1.1-le:
 
+ - added new value for 'net.tcp.service*[]', 2 - timeout (Eugene)
  - fixed order of displaying log files (Eugene)
  - added support of 'pfree' and 'pused' for 'vfs.fs.size' of windows (Eugene)
  - added '<=' comporator for trigger severity of action conditions (Eugene)
